Fri Jul 20 13:30:18 2001                        Michael Jennings (mej)

Oh look.  It can check stuff out again.  Yay.
----------------------------------------------------------------------
Mon Jul 23 19:22:43 2001                        Michael Jennings (mej)

Still working on rearranging things....
----------------------------------------------------------------------
Tue Jul 24 19:59:05 2001                        Michael Jennings (mej)

Now we just have to get somewhere.... :P
----------------------------------------------------------------------
Wed Jul 25 20:15:25 2001                        Michael Jennings (mej)

Working on the new build hierarchy.  Details to follow....
----------------------------------------------------------------------
Thu Jul 26 18:47:03 2001                        Michael Jennings (mej)

Yay.  The build goop is pretty much done now.
----------------------------------------------------------------------
Fri Jul 27 14:28:55 2001                        Michael Jennings (mej)

Let's see how this one fares....
----------------------------------------------------------------------
Fri Jul 27 15:25:40 2001                        Michael Jennings (mej)

It helps if you change *all* the occurances of a filename, not just
one.
----------------------------------------------------------------------
Mon Jul 30 20:35:42 2001                        Michael Jennings (mej)

Now we're cooking....
----------------------------------------------------------------------
Tue Jul 31 15:24:50 2001                        Michael Jennings (mej)

If zaxxon would behave itself, we'd be doing a lot better.
----------------------------------------------------------------------
Tue Jul 31 20:30:08 2001                        Michael Jennings (mej)

Looks like builds are working now, and I've converted the parallel
stuff.  We'll see how that goes tomorrow.
----------------------------------------------------------------------