@@ -21,7 +21,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: RPM.pm,v 1.2 2001/07/31 03:33:55 mej Exp $
+# $Id: RPM.pm,v 1.3 2001/08/02 19:45:17 mej Exp $
 #
 
 package Avalon::RPM;
@@ -203,6 +203,9 @@ rpm_build
         print "$line\n";
         if ($line =~ /^Wrote:\s+(\S+\.\w+\.rpm)$/) {
             push @out_files, $1;
+        } elsif ($line =~ /^rpm:\s*no spec files given for build/) {
+            $err = AVALON_NO_SOURCES;
+            $msg = "Attempted build with no spec file";
         } elsif ($line =~ /^(error: )?line \d+: [^:]+: /
                  || $line =~ /^(error: )?Failed to find \w+:/
                  || $line =~ /^(error: )?Symlink points to BuildRoot: /) {
